tests/paczka1/small_fuzzy/17705263.err
Error in line 1: b1v2a99Fs A523 10,5
Error in line 5: A8OhJtTsF A844 19,3
Error in line 3: b1v2a99Fs A844 87,0
